@@ -3763,4 +3763,12 @@ with \Y. ---/
 /(a)b|ac/++
     ac\O3
 
+/(?(DEFINE)(a(?2)|b)(b(?1)|a))(?:(?1)|(?2))/SI
+
+/(a(?2)|b)(b(?1)|a)(?:(?1)|(?2))/SI
+
+/(a(?2)|b)(b(?1)|a)(?1)(?2)/SI
+
+/(abc)(?1)/SI
+
 /-- End of testinput2 --/
